--- a/Halloapp/de.lproj/Localizable.strings
+++ b/Halloapp/de.lproj/Localizable.strings
@@ -322,30 +322,6 @@
 /* Chat entry that can be tapped to add the contact to address book */
 "chat.event.tap.to.add.contact" = "Tippen, um %@ zu deinen Kontakten hinzuzufügen";
 
-/* Message text shown with the user who changed a groups content expiry settings */
-"chat.group.event.expiry.changed" = "%1$@ hat die Ablaufzeit der Gruppeninhalte auf %2$@ geändert";
-
-/* Message text shown when you change a groups content expiry settings */
-"chat.group.event.expiry.changed.you" = "Du hast die Ablaufzeit der Gruppeninhalte auf %1@ geändert";
-
-/* Message text shown with the user who joined the group via invite link */
-"chat.group.event.join" = "%@ ist der Gruppe über einen Einladungslink beigetreten";
-
-/* Message text shown when you join a group via invite link */
-"chat.group.event.join.you" = "Du bist der Gruppe über einen Einladungslink beigetreten";
-
-/* Message text shown when a group member is auto promoted to admin. When the one-and-only admin of a group leaves the group, a random member is promoted to admin */
-"chat.group.event.member.autopromoted" = "%@ wurde automatisch Admin";
-
-/* Message text shown when you are auto promoted to admin. When the one-and-only admin of a group leaves the group, a random member is promoted to admin */
-"chat.group.event.member.autopromoted.you" = "Du wurdest automatisch Admin";
-
-/* Message text shown with the user who left the group */
-"chat.group.event.member.left" = "%@ hat die Gruppe verlassen";
-
-/* Message text shown when you leave a group */
-"chat.group.event.member.left.you" = "Du hast die Gruppe verlassen";
-
 /* Group content expiry time limit option */
 "chat.group.expiry.option.24hours" = "24 Stunden";
 
@@ -428,7 +404,7 @@
 "chat.list.user.deleted.reaction.video" = "%1$@ hat %2$@ von einem Video entfernt";
 
 /* Text shown when user reacted to an audio */
-"chat.list.user.reacted.audio" = "%1$@ hat mit %2$@ auf eine Audio-Nachricht reagiert";
+"chat.list.user.reacted.audio" = "%1$@ reagierte mit %2$@ auf eine Audio-Nachricht";
 
 /* Text shown when user reacted to an image */
 "chat.list.user.reacted.image" = "%1$@ hat mit %2$@ auf ein Bild reagiert";
@@ -754,18 +730,6 @@
 /* Indicates that an item has failed to be sent. */
 "failed.to.send" = "Kann nicht gesendet werden";
 
-/* Number of contacts added to a group. */
-"feed.collapsed.n.users.added" = "feed.collapsed.n.users.added";
-
-/* Number of contacts that joined a group. */
-"feed.collapsed.n.users.joined" = "feed.collapsed.n.users.joined";
-
-/* Number of contacts that left a group. */
-"feed.collapsed.n.users.left" = "feed.collapsed.n.users.left";
-
-/* Number of contacts removed from a group. */
-"feed.collapsed.n.users.removed" = "feed.collapsed.n.users.removed";
-
 /* Text shown in place of a received post we are not able to decrypt yet. */
 "feed.comment.waiting" = "Warten auf diesen Kommentar. Das kann eine Weile dauern.";
 
@@ -951,60 +915,6 @@
 
 /* Label shown above group description input box */
 "group.description.label" = "GRUPPENBESCHREIBUNG";
-
-/* Message text shown with the user who added a group member */
-"group.event.added.member" = "%1$@ hat %2$@ hinzugefügt";
-
-/* Message text shown when you add a group member */
-"group.event.added.member.you" = "Du hast %1@ hinzugefügt";
-
-/* Message text shown with the user who changed the group avatar */
-"group.event.changed.avatar" = "%@ hat das Gruppenbild geändert";
-
-/* Message text shown with the user who changed the group avatar */
-"group.event.changed.avatar.you" = "Du hast das Gruppenbild geändert";
-
-/* Message text shown with the user who changed the background */
-"group.event.changed.background" = "%@ hat die Hintergrundfarbe geändert";
-
-/* Message text shown when you change the background */
-"group.event.changed.background.you" = "Du hast die Hintergrundfarbe geändert";
-
-/* Message text shown with the user who changed the group description */
-"group.event.changed.description" = "%1@ hat die Gruppenbeschreibung geändert";
-
-/* Message text shown when you change the group description */
-"group.event.changed.description.you" = "Du hast die Gruppenbeschreibung geändert";
-
-/* Message text shown with the user who changed the group name */
-"group.event.changed.name" = "%1$@ hat den Gruppennamen in \"%2$@\" umbenannt";
-
-/* Message text shown when you change the group name */
-"group.event.changed.name.you" = "Du hast den Gruppennamen in \"%1@\" umbenannt";
-
-/* Message text shown with the user who created the group */
-"group.event.created.group" = "%1$@ hat die Gruppe \"%2$@\" gegründet";
-
-/* Message text shown when you create a group */
-"group.event.created.group.you" = "Du hast die Gruppe \"%1@\" gegründet";
-
-/* Message text shown with the user who demoted a group admin */
-"group.event.demoted.member" = "%1$@ hat %2$@ als Admin entfernt";
-
-/* Message text shown when you demote a group admin */
-"group.event.demoted.member.you" = "Du hast %1@ als Admin entfernt";
-
-/* Message text shown with the user who promoted a group member */
-"group.event.promoted.member" = "%1$@ hat %2$@ zum Admin gemacht";
-
-/* Message text shown when you promote a group member */
-"group.event.promoted.member.you" = "Du hast %1@ zum Admin gemacht";
-
-/* Message text shown with the user who removed a group member */
-"group.event.removed.member" = "%1$@ hat %2$@ aus der Gruppe entfernt";
-
-/* Message text shown when you remove a group member */
-"group.event.removed.member.you" = "Du hast %1@ entfernt";
 
 /* Indicates how many members are in the group */
 "group.feed.n.members" = "group.feed.n.members";
@@ -1347,9 +1257,6 @@
 
 /* Title of a location in location list if it does not have a name. */
 "locationSharing.untitledLocation" = "Unbenannter Standort";
-
-/* Displayed in place of own name (e.g., next to own comments) */
-"meCapitalized" = "Ich";
 
 /* Refers to albums in Photo Library. */
 "media.albums" = "Alben";
@@ -2223,30 +2130,6 @@
 /* Default preview text shown for a symmetric contact who just joined Halloapp */
 "thread.list.preview.new.user.default" = "%@ nutzt HalloApp🎉";
 
-/* Last seen timestamp: full date in short format and time */
-"timestamp.last.seen.date.at.time" = "Zuletzt online %1$@ um %2$@";
-
-/* Last seen timestamp: day of week and time */
-"timestamp.last.seen.dayofweek.at.time" = "Zuletzt online %1$@ um %2$@";
-
-/* Last seen timestamp: today at specific time. */
-"timestamp.last.seen.today.at" = "Zuletzt online heute um %@";
-
-/* Last seen timestamp: yesterday at specific time. */
-"timestamp.last.seen.yesterday.at" = "Zuletzt online gestern um %@";
-
-/* Capitalized translation of `Now` to be used as timestamp. */
-"timestamp.now.capitalized" = "Gerade eben";
-
-/* Lowercase translation of `Now` to be used as timestamp. */
-"timestamp.now.lowercase" = "gerade eben";
-
-/* Timestamp: `Today` */
-"timestamp.today" = "Heute";
-
-/* Timestamp: `Yesterday` */
-"timestamp.yesterday" = "Gestern";
-
 /* Camera screen title */
 "title.camera" = "Kamera";
 
@@ -2348,12 +2231,6 @@
 
 /* Button to start voice call. Should be translated as verb. */
 "user.voice.call" = "Anrufen";
-
-/* Reference to the user, second person pronoun */
-"user.you" = "dich";
-
-/* Capitalized reference to the user, second person pronoun */
-"user.you.capitalized" = "Dich";
 
 /* No comment provided by engineer. */
 "VIDEO" = "VIDEO";
