--- a/Halloapp/id.lproj/Localizable.strings
+++ b/Halloapp/id.lproj/Localizable.strings
@@ -62,7 +62,7 @@
 "alert.no.internet.try.again" = "Pastikan Anda memiliki sambungan internet, lalu coba lagi.";
 
 /* Title of the activity tab when contacts permissions aren't given. */
-"allow.contacts.for.activity" = "Agar mendapat update dari teman Anda, beri akses ke kontak.";
+"allow.contacts.for.activity" = "Agar mendapat kabar terbaru dari teman Anda, beri akses ke kontak.";
 
 /* Title of the chats tab when contacts permissions aren't given. */
 "allow.contacts.for.chat" = "Untuk memulai chat, beri akses ke kontak";
@@ -321,30 +321,6 @@
 
 /* Chat entry that can be tapped to add the contact to address book */
 "chat.event.tap.to.add.contact" = "Ketuk untuk menambahkan %@ ke buku alamat Anda";
-
-/* Message text shown with the user who changed a groups content expiry settings */
-"chat.group.event.expiry.changed" = "%1$@ mengubah masa kedaluwarsa konten grup ke %2$@";
-
-/* Message text shown when you change a groups content expiry settings */
-"chat.group.event.expiry.changed.you" = "Anda mengubah masa kedaluwarsa konten grup ke %1@";
-
-/* Message text shown with the user who joined the group via invite link */
-"chat.group.event.join" = "%@ telah bergabung dengan grup melalui Tautan Undangan Grup";
-
-/* Message text shown when you join a group via invite link */
-"chat.group.event.join.you" = "Anda telah bergabung dengan grup melalui Tautan Undangan Grup";
-
-/* Message text shown when a group member is auto promoted to admin. When the one-and-only admin of a group leaves the group, a random member is promoted to admin */
-"chat.group.event.member.autopromoted" = "%@ secara otomatis dijadikan sebagai admin";
-
-/* Message text shown when you are auto promoted to admin. When the one-and-only admin of a group leaves the group, a random member is promoted to admin */
-"chat.group.event.member.autopromoted.you" = "Anda secara otomatis dijadikan sebagai admin";
-
-/* Message text shown with the user who left the group */
-"chat.group.event.member.left" = "%@ keluar";
-
-/* Message text shown when you leave a group */
-"chat.group.event.member.left.you" = "Anda keluar";
 
 /* Group content expiry time limit option */
 "chat.group.expiry.option.24hours" = "24 Jam";
@@ -754,18 +730,6 @@
 /* Indicates that an item has failed to be sent. */
 "failed.to.send" = "Gagal mengirim";
 
-/* Number of contacts added to a group. */
-"feed.collapsed.n.users.added" = "feed.collapsed.n.users.added";
-
-/* Number of contacts that joined a group. */
-"feed.collapsed.n.users.joined" = "feed.collapsed.n.users.joined";
-
-/* Number of contacts that left a group. */
-"feed.collapsed.n.users.left" = "feed.collapsed.n.users.left";
-
-/* Number of contacts removed from a group. */
-"feed.collapsed.n.users.removed" = "feed.collapsed.n.users.removed";
-
 /* Text shown in place of a received post we are not able to decrypt yet. */
 "feed.comment.waiting" = "Menunggu komentar ini. Proses ini mungkin memerlukan waktu beberapa saat.";
 
@@ -951,60 +915,6 @@
 
 /* Label shown above group description input box */
 "group.description.label" = "Deskripsi Grup";
-
-/* Message text shown with the user who added a group member */
-"group.event.added.member" = "%1$@ menambahkan %2$@";
-
-/* Message text shown when you add a group member */
-"group.event.added.member.you" = "Anda menambahkan %1@";
-
-/* Message text shown with the user who changed the group avatar */
-"group.event.changed.avatar" = "%@ mengubah ikon grup";
-
-/* Message text shown with the user who changed the group avatar */
-"group.event.changed.avatar.you" = "Anda mengubah ikon grup";
-
-/* Message text shown with the user who changed the background */
-"group.event.changed.background" = "%@ mengubah warna latar belakang";
-
-/* Message text shown when you change the background */
-"group.event.changed.background.you" = "Anda mengubah warna latar belakang";
-
-/* Message text shown with the user who changed the group description */
-"group.event.changed.description" = "%1@ mengubah deskripsi grup";
-
-/* Message text shown when you change the group description */
-"group.event.changed.description.you" = "Anda mengubah deskripsi grup";
-
-/* Message text shown with the user who changed the group name */
-"group.event.changed.name" = "%1$@ mengubah nama grup menjadi \"%2$@\"";
-
-/* Message text shown when you change the group name */
-"group.event.changed.name.you" = "Anda mengubah nama grup menjadi \"%1@\"";
-
-/* Message text shown with the user who created the group */
-"group.event.created.group" = "%1$@ membuat grup \"%2$@\"";
-
-/* Message text shown when you create a group */
-"group.event.created.group.you" = "Anda membuat grup \"%1@\"";
-
-/* Message text shown with the user who demoted a group admin */
-"group.event.demoted.member" = "%1$@ mengeluarkan %2$@ sebagai admin";
-
-/* Message text shown when you demote a group admin */
-"group.event.demoted.member.you" = "Anda mengeluarkan %1@ sebagai admin";
-
-/* Message text shown with the user who promoted a group member */
-"group.event.promoted.member" = "%1$@ menjadikan %2$@ sebagai admin";
-
-/* Message text shown when you promote a group member */
-"group.event.promoted.member.you" = "Anda menjadikan %1@ sebagai admin";
-
-/* Message text shown with the user who removed a group member */
-"group.event.removed.member" = "%1$@ mengeluarkan %2$@";
-
-/* Message text shown when you remove a group member */
-"group.event.removed.member.you" = "Anda mengeluarkan %1@";
 
 /* Indicates how many members are in the group */
 "group.feed.n.members" = "group.feed.n.members";
@@ -1347,9 +1257,6 @@
 
 /* Title of a location in location list if it does not have a name. */
 "locationSharing.untitledLocation" = "Lokasi Tanpa Judul";
-
-/* Displayed in place of own name (e.g., next to own comments) */
-"meCapitalized" = "Saya";
 
 /* Refers to albums in Photo Library. */
 "media.albums" = "Album";
@@ -2223,30 +2130,6 @@
 /* Default preview text shown for a symmetric contact who just joined Halloapp */
 "thread.list.preview.new.user.default" = "%@ ada di HalloApp🎉";
 
-/* Last seen timestamp: full date in short format and time */
-"timestamp.last.seen.date.at.time" = "Terakhir dilihat %1$@, %2$@";
-
-/* Last seen timestamp: day of week and time */
-"timestamp.last.seen.dayofweek.at.time" = "Terakhir dilihat %1$@, %2$@";
-
-/* Last seen timestamp: today at specific time. */
-"timestamp.last.seen.today.at" = "Terakhir dilihat hari ini %@";
-
-/* Last seen timestamp: yesterday at specific time. */
-"timestamp.last.seen.yesterday.at" = "Terakhir dilihat kemarin %@";
-
-/* Capitalized translation of `Now` to be used as timestamp. */
-"timestamp.now.capitalized" = "Sekarang";
-
-/* Lowercase translation of `Now` to be used as timestamp. */
-"timestamp.now.lowercase" = "sekarang";
-
-/* Timestamp: `Today` */
-"timestamp.today" = "Hari ini";
-
-/* Timestamp: `Yesterday` */
-"timestamp.yesterday" = "Kemarin";
-
 /* Camera screen title */
 "title.camera" = "Kamera";
 
@@ -2348,12 +2231,6 @@
 
 /* Button to start voice call. Should be translated as verb. */
 "user.voice.call" = "Panggil";
-
-/* Reference to the user, second person pronoun */
-"user.you" = "Anda";
-
-/* Capitalized reference to the user, second person pronoun */
-"user.you.capitalized" = "Anda";
 
 /* No comment provided by engineer. */
 "VIDEO" = "VIDEO";
