--- a/Halloapp/de.lproj/Localizable.strings
+++ b/Halloapp/de.lproj/Localizable.strings
@@ -691,9 +691,6 @@
 /* Text to show on profile for users you are not connected with */
 "exchange.phone.numbers.to.connect" = "Einfach Handynummern austauschen, um den Kontakt herzustellen";
 
-/* Text on external share preview background, followed by URL */
-"externalshare.download" = "HalloApp kostenlos herunterladen:";
-
 /* Description of an externally shared post containing an audio post */
 "externalShare.og.description.audio" = "Audiobeitrag";
 
@@ -706,8 +703,8 @@
 /* Title for posts that are externally shared, 'John Smith's HalloApp Post' */
 "externalShare.og.title3" = "%@'s HalloApp-Beitrag";
 
-/* Attached to our logo as an image, 'Posted from HalloApp' */
-"externalshare.postedFrom" = "Gepostet von";
+/* Always 'Posted from HalloApp', but we are applying additional formatting to HalloApp */
+"externalshare.postedFrom" = "Gepostet von %@";
 
 /* VoiceOver label for camera button in floating compose post menu in Home view. */
 "fab.accessibility.camera" = "Kamera";
@@ -2183,6 +2180,9 @@
 
 /* Title for the screen with information about who saw your post. */
 "title.your.post" = "Gesehen von";
+
+/* Toast displayed while preparing video for external share */
+"toast.exporting" = "Export läuft...";
 
 /* Text on the bottom sheet's button that dismisses the sheet. */
 "try.moments" = "Momente ausprobieren";
