--- a/Notification Service Extension/nl.lproj/Localizable.strings
+++ b/Notification Service Extension/nl.lproj/Localizable.strings
@@ -247,3 +247,6 @@
 /* Row in Settings screen */
 "title.privacy" = "Privacy";
 
+/* Toast displayed while preparing video for external share */
+"toast.exporting" = "Wordt geëxporteerd…";
+
