--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -691,9 +691,6 @@
 /* Text to show on profile for users you are not connected with */
 "exchange.phone.numbers.to.connect" = "Om connectie te maken, moeten jullie telefoonnummers uitwisselen";
 
-/* Text on external share preview background, followed by URL */
-"externalshare.download" = "Download HalloApp gratis:";
-
 /* Description of an externally shared post containing an audio post */
 "externalShare.og.description.audio" = "Audiopost";
 
@@ -706,8 +703,8 @@
 /* Title for posts that are externally shared, 'John Smith's HalloApp Post' */
 "externalShare.og.title3" = "HalloApp-post van %@";
 
-/* Attached to our logo as an image, 'Posted from HalloApp' */
-"externalshare.postedFrom" = "Gepost vanaf";
+/* Always 'Posted from HalloApp', but we are applying additional formatting to HalloApp */
+"externalshare.postedFrom" = "Gepost vanaf %@";
 
 /* VoiceOver label for camera button in floating compose post menu in Home view. */
 "fab.accessibility.camera" = "Camera";
@@ -2183,6 +2180,9 @@
 
 /* Title for the screen with information about who saw your post. */
 "title.your.post" = "Gezien Door";
+
+/* Toast displayed while preparing video for external share */
+"toast.exporting" = "Wordt geëxporteerd…";
 
 /* Text on the bottom sheet's button that dismisses the sheet. */
 "try.moments" = "Probeer Momenten";
