--- a/Halloapp/ru.lproj/Localizable.strings
+++ b/Halloapp/ru.lproj/Localizable.strings
@@ -691,9 +691,6 @@
 /* Text to show on profile for users you are not connected with */
 "exchange.phone.numbers.to.connect" = "Для установки связи вам нужно обменяться номерами телефонов";
 
-/* Text on external share preview background, followed by URL */
-"externalshare.download" = "Скачайте HalloApp бесплатно:";
-
 /* Description of an externally shared post containing an audio post */
 "externalShare.og.description.audio" = "Аудио пост";
 
@@ -706,7 +703,7 @@
 /* Title for posts that are externally shared, 'John Smith's HalloApp Post' */
 "externalShare.og.title3" = "Пост от %@ в HalloApp";
 
-/* Attached to our logo as an image, 'Posted from HalloApp' */
+/* Always 'Posted from HalloApp', but we are applying additional formatting to HalloApp */
 "externalshare.postedFrom" = "Опубликовано из";
 
 /* VoiceOver label for camera button in floating compose post menu in Home view. */
@@ -2183,6 +2180,9 @@
 
 /* Title for the screen with information about who saw your post. */
 "title.your.post" = "Видели:";
+
+/* Toast displayed while preparing video for external share */
+"toast.exporting" = "Экспорт…";
 
 /* Text on the bottom sheet's button that dismisses the sheet. */
 "try.moments" = "Попробуйте Моменты";
