--- a/Notification Service Extension/es.lproj/Localizable.strings
+++ b/Notification Service Extension/es.lproj/Localizable.strings
@@ -244,3 +244,6 @@
 /* Row in Settings screen */
 "title.privacy" = "Privacidad";
 
+/* Toast displayed while preparing video for external share */
+"toast.exporting" = "Exportando...";
+
