--- a/Notification Service Extension/fa.lproj/Localizable.strings
+++ b/Notification Service Extension/fa.lproj/Localizable.strings
@@ -142,6 +142,12 @@
 /* Content for unknown contact notification. */
 "notification.contact.unknown.content" = "یکی از مخاطب‌هایتان به هالواپ پیوست";
 
+/* Body of the daily moment notification. */
+"notification.daily.moment.body" = "شما ۲ دقیقه وقت دارید لحظه به اشتراک بگذارید";
+
+/* Title of the daily moment notification. */
+"notification.daily.moment.title" = "لحظه روزانه";
+
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@ دعوت شما را به هالواپ قبول کرد 🎉";
 
@@ -201,6 +207,9 @@
 
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "ویدیو 📹";
+
+/* Push notification for a reaction to post */
+"notification.post.reaction" = "به یک پست @% عکس‌العمل نشان داد";
 
 /* New moment unlock notification text to be shown to the user. */
 "notification.unlocked.moment.1" = "@% برای دیدن لحظه شما، لحظه‌ای را به اشتراک گذاشت";
