--- a/Notification Service Extension/ru.lproj/Localizable.strings
+++ b/Notification Service Extension/ru.lproj/Localizable.strings
@@ -247,3 +247,6 @@
 /* Row in Settings screen */
 "title.privacy" = "Конфиденциальность";
 
+/* Toast displayed while preparing video for external share */
+"toast.exporting" = "Экспорт…";
+
