--- a/Share Extension/de.lproj/Localizable.strings
+++ b/Share Extension/de.lproj/Localizable.strings
@@ -216,6 +216,9 @@
 /* Row in Settings screen */
 "title.privacy" = "Privatsphäre";
 
+/* Toast displayed while preparing video for external share */
+"toast.exporting" = "Export läuft...";
+
 /* How many bytes from total have been uploaded */
 "uploading.bytes.progress" = "%1$@ von %2$@";
 
