--- a/Share Extension/ru.lproj/Localizable.strings
+++ b/Share Extension/ru.lproj/Localizable.strings
@@ -216,6 +216,9 @@
 /* Row in Settings screen */
 "title.privacy" = "Конфиденциальность";
 
+/* Toast displayed while preparing video for external share */
+"toast.exporting" = "Экспорт…";
+
 /* How many bytes from total have been uploaded */
 "uploading.bytes.progress" = "%1$@ of %2$@";
 
